fixed selecting elements when dragging on safari

--- a/css/document.css
+++ b/css/document.css
@@ -4,6 +4,13 @@ body
     background-color: #f4f4f4;
     user-select:      none;
     font-family:      Inter;
+
+    -webkit-touch-callout: none; 
+      -webkit-user-select: none; 
+       -khtml-user-select: none; 
+         -moz-user-select: none; 
+          -ms-user-select: none; 
+              user-select: none; 
 }
 
 
